[gd_scene load_steps=14 format=3 uid="uid://d4iwr8icvtwr6"]

[ext_resource type="Script" uid="uid://dqbyb0sth55en" path="res://Scripts/PauseMenu.gd" id="1_425uk"]
[ext_resource type="Texture2D" uid="uid://df3eaw8ttv2l6" path="res://Graphics/GUI/Windows/1-4.png" id="1_siy43"]
[ext_resource type="Texture2D" uid="uid://b3degqy5uf8ea" path="res://Graphics/GUI/Buttons/7-1.png" id="2_yxrls"]
[ext_resource type="Texture2D" uid="uid://bdn1sk233bncw" path="res://Graphics/GUI/Buttons/7-3.png" id="3_gqxqw"]
[ext_resource type="Texture2D" uid="uid://b2bod7ibmudmv" path="res://Graphics/GUI/Buttons/7-2.png" id="4_lptsj"]
[ext_resource type="FontFile" uid="uid://c88rb6dh1ub4j" path="res://Graphics/Fonts/Press_Start_2P/PressStart2P-Regular.ttf" id="5_425uk"]
[ext_resource type="Texture2D" uid="uid://uivhim05lh6f" path="res://Graphics/GUI/Buttons/11-1.png" id="7_mys0b"]
[ext_resource type="Texture2D" uid="uid://duy6x83y07ptt" path="res://Graphics/GUI/Buttons/11-2.png" id="8_c7c70"]
[ext_resource type="Texture2D" uid="uid://b50anxboht7j5" path="res://Graphics/GUI/Buttons/11-3.png" id="9_pmvjn"]
[ext_resource type="AudioStream" uid="uid://kffjcdwavdni" path="res://SFX/New/Buttons_Clicks.mp3" id="10_mys0b"]
[ext_resource type="AudioStream" uid="uid://cm5jcqpgvsjcl" path="res://SFX/mouse/button over.mp3" id="11_c7c70"]

[sub_resource type="LabelSettings" id="LabelSettings_m8v84"]
font = ExtResource("5_425uk")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_1363l"]
font = ExtResource("5_425uk")
font_size = 30

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 0
script = ExtResource("1_425uk")

[node name="Background" type="TextureRect" parent="."]
process_mode = 3
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 690.0
offset_top = 190.0
offset_right = -690.0
offset_bottom = -190.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_siy43")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 3
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.611
anchor_right = 0.5
anchor_bottom = 0.611
offset_left = -125.0
offset_top = -307.88
offset_right = 125.0
offset_bottom = 68.12
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35
alignment = 1

[node name="ResumeButton" type="TextureButton" parent="VBoxContainer"]
process_mode = 3
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_yxrls")
texture_pressed = ExtResource("3_gqxqw")
texture_hover = ExtResource("4_lptsj")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/ResumeButton"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -11.5
offset_right = 32.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "RESUME"
label_settings = SubResource("LabelSettings_m8v84")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="TextureButton" parent="VBoxContainer"]
process_mode = 3
texture_filter = 1
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_yxrls")
texture_pressed = ExtResource("3_gqxqw")
texture_hover = ExtResource("4_lptsj")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/OptionButton"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -11.5
offset_right = 32.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "OPTIONS"
label_settings = SubResource("LabelSettings_m8v84")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="TextureButton" parent="VBoxContainer"]
process_mode = 3
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_yxrls")
texture_pressed = ExtResource("3_gqxqw")
texture_hover = ExtResource("4_lptsj")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/MainMenuButton"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -37.0
offset_right = 60.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "MAIN
MENU"
label_settings = SubResource("LabelSettings_m8v84")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsMenu" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="Options" type="VBoxContainer" parent="OptionsMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -502.5
offset_top = -449.0
offset_right = 502.5
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="OptionsMenu/Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 50
text = "
Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="OptionsMenu/Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 50
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenu/Options"]
layout_mode = 2

[node name="Label2" type="Label" parent="OptionsMenu/Options/HBoxContainer"]
layout_mode = 2
text = "                       "

[node name="Volumen" type="VBoxContainer" parent="OptionsMenu/Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
alignment = 1

[node name="General" type="HBoxContainer" parent="OptionsMenu/Options/HBoxContainer/Volumen"]
layout_mode = 2
alignment = 1

[node name="MasterSlider" type="HSlider" parent="OptionsMenu/Options/HBoxContainer/Volumen/General"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("7_mys0b")
theme_override_icons/grabber_highlight = ExtResource("8_c7c70")
theme_override_icons/tick = ExtResource("9_pmvjn")
step = 2.0
value = 100.0
allow_lesser = true

[node name="Label" type="Label" parent="OptionsMenu/Options/HBoxContainer/Volumen/General"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 25
text = "  General"

[node name="Music" type="HBoxContainer" parent="OptionsMenu/Options/HBoxContainer/Volumen"]
layout_mode = 2

[node name="MusicSlider" type="HSlider" parent="OptionsMenu/Options/HBoxContainer/Volumen/Music"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("7_mys0b")
theme_override_icons/grabber_highlight = ExtResource("8_c7c70")
theme_override_icons/tick = ExtResource("9_pmvjn")
step = 2.0
value = 100.0
allow_lesser = true

[node name="Label" type="Label" parent="OptionsMenu/Options/HBoxContainer/Volumen/Music"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 25
text = "  Music"

[node name="SFX" type="HBoxContainer" parent="OptionsMenu/Options/HBoxContainer/Volumen"]
layout_mode = 2

[node name="SFXSlider" type="HSlider" parent="OptionsMenu/Options/HBoxContainer/Volumen/SFX"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("7_mys0b")
theme_override_icons/grabber_highlight = ExtResource("8_c7c70")
theme_override_icons/tick = ExtResource("9_pmvjn")
step = 2.0
value = 100.0
allow_lesser = true

[node name="Label" type="Label" parent="OptionsMenu/Options/HBoxContainer/Volumen/SFX"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 25
text = "  SFX"

[node name="FullScreen" type="VBoxContainer" parent="OptionsMenu/Options/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="OptionsMenu/Options/HBoxContainer/FullScreen"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 25
text = "Graphics
"

[node name="CheckButton" type="CheckButton" parent="OptionsMenu/Options/HBoxContainer/FullScreen"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 16
button_pressed = true
text = "Full Screen  "
alignment = 1

[node name="Label" type="Label" parent="OptionsMenu/Options/HBoxContainer"]
layout_mode = 2
text = "                       "

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/Options"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="OptionsMenu/Options/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 35
text = "


Control Layout
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoveLeft" type="HBoxContainer" parent="OptionsMenu/Options/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OptionsMenu/Options/VBoxContainer/MoveLeft"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsMenu/Options/VBoxContainer/MoveLeft"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 20
text = "Move Left: "

[node name="Label2" type="Label" parent="OptionsMenu/Options/VBoxContainer/MoveLeft"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 20
text = "Left Arrow"

[node name="MoveRight" type="HBoxContainer" parent="OptionsMenu/Options/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OptionsMenu/Options/VBoxContainer/MoveRight"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsMenu/Options/VBoxContainer/MoveRight"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 20
text = "Move Right: "

[node name="Label2" type="Label" parent="OptionsMenu/Options/VBoxContainer/MoveRight"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 20
text = "Right Arrow"

[node name="MoveDown" type="HBoxContainer" parent="OptionsMenu/Options/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OptionsMenu/Options/VBoxContainer/MoveDown"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsMenu/Options/VBoxContainer/MoveDown"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 20
text = "Move Down: "

[node name="Label2" type="Label" parent="OptionsMenu/Options/VBoxContainer/MoveDown"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 20
text = "Down Arrow"

[node name="Jump" type="HBoxContainer" parent="OptionsMenu/Options/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OptionsMenu/Options/VBoxContainer/Jump"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsMenu/Options/VBoxContainer/Jump"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 20
text = "Jump: "

[node name="Label2" type="Label" parent="OptionsMenu/Options/VBoxContainer/Jump"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 20
text = "S    "

[node name="Shoot" type="HBoxContainer" parent="OptionsMenu/Options/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OptionsMenu/Options/VBoxContainer/Shoot"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsMenu/Options/VBoxContainer/Shoot"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 20
text = "Shoot: "

[node name="Label2" type="Label" parent="OptionsMenu/Options/VBoxContainer/Shoot"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 20
text = "A     "

[node name="Dash" type="HBoxContainer" parent="OptionsMenu/Options/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OptionsMenu/Options/VBoxContainer/Dash"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsMenu/Options/VBoxContainer/Dash"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 20
text = "Dash: "

[node name="Label2" type="Label" parent="OptionsMenu/Options/VBoxContainer/Dash"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_425uk")
theme_override_font_sizes/font_size = 20
text = "Shift"

[node name="BackButtonContainer" type="VBoxContainer" parent="OptionsMenu"]
process_mode = 3
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.611
anchor_right = 0.5
anchor_bottom = 0.611
offset_left = -124.0
offset_top = 176.12
offset_right = 125.0
offset_bottom = 271.12
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35
alignment = 1

[node name="BackButton" type="TextureButton" parent="OptionsMenu/BackButtonContainer"]
process_mode = 3
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_yxrls")
texture_pressed = ExtResource("3_gqxqw")
texture_hover = ExtResource("4_lptsj")
stretch_mode = 0

[node name="Label" type="Label" parent="OptionsMenu/BackButtonContainer/BackButton"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -11.5
offset_right = 32.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "BACK"
label_settings = SubResource("LabelSettings_1363l")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_mys0b")
volume_db = -10.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_c7c70")

[connection signal="mouse_entered" from="VBoxContainer/ResumeButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/OptionButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/MainMenuButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_mainmenu_pressed"]
[connection signal="mouse_entered" from="OptionsMenu/BackButtonContainer/BackButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="OptionsMenu/BackButtonContainer/BackButton" to="." method="_on_back_pressed"]
